crates/snow-parser/tests/snapshots/parser_tests__service_def_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"service Counter do\\n  fn init(start_val :: Int) -> Int do\\n    start_val\\n  end\\nend\")"
---
SOURCE_FILE@0..64
  SERVICE_DEF@0..64
    SERVICE_KW@0..7 "service"
    NAME@7..14
      IDENT@7..14 "Counter"
    DO_KW@14..16 "do"
    BLOCK@16..61
      NEWLINE@16..17 "\n"
      FN_DEF@17..60
        FN_KW@17..19 "fn"
        NAME@19..23
          IDENT@19..23 "init"
        PARAM_LIST@23..39
          L_PAREN@23..24 "("
          PARAM@24..38
            IDENT@24..33 "start_val"
            TYPE_ANNOTATION@33..38
              COLON_COLON@33..35 "::"
              IDENT@35..38 "Int"
          R_PAREN@38..39 ")"
        TYPE_ANNOTATION@39..44
          ARROW@39..41 "->"
          IDENT@41..44 "Int"
        DO_KW@44..46 "do"
        BLOCK@46..57
          NEWLINE@46..47 "\n"
          NAME_REF@47..56
            IDENT@47..56 "start_val"
          NEWLINE@56..57 "\n"
        END_KW@57..60 "end"
      NEWLINE@60..61 "\n"
    END_KW@61..64 "end"
  EOF@64..64 ""
