crates/snow-parser/tests/snapshots/parser_tests__service_def_with_call_handler.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"service Counter do\\n  call GetCount() :: Int do |state|\\n    (state, state)\\n  end\\nend\")"
---
SOURCE_FILE@0..67
  SERVICE_DEF@0..67
    SERVICE_KW@0..7 "service"
    NAME@7..14
      IDENT@7..14 "Counter"
    DO_KW@14..16 "do"
    BLOCK@16..64
      NEWLINE@16..17 "\n"
      CALL_HANDLER@17..63
        CALL_KW@17..21 "call"
        NAME@21..29
          IDENT@21..29 "GetCount"
        PARAM_LIST@29..31
          L_PAREN@29..30 "("
          R_PAREN@30..31 ")"
        TYPE_ANNOTATION@31..36
          COLON_COLON@31..33 "::"
          IDENT@33..36 "Int"
        DO_KW@36..38 "do"
        BAR@38..39 "|"
        NAME@39..44
          IDENT@39..44 "state"
        BAR@44..45 "|"
        BLOCK@45..60
          NEWLINE@45..46 "\n"
          TUPLE_EXPR@46..59
            L_PAREN@46..47 "("
            NAME_REF@47..52
              IDENT@47..52 "state"
            COMMA@52..53 ","
            NAME_REF@53..58
              IDENT@53..58 "state"
            R_PAREN@58..59 ")"
          NEWLINE@59..60 "\n"
        END_KW@60..63 "end"
      NEWLINE@63..64 "\n"
    END_KW@64..67 "end"
  EOF@67..67 ""
