crates/snow-parser/tests/snapshots/parser_tests__service_def_with_cast_handler.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"service Counter do\\n  cast Reset() do |state|\\n    0\\n  end\\nend\")"
---
SOURCE_FILE@0..47
  SERVICE_DEF@0..47
    SERVICE_KW@0..7 "service"
    NAME@7..14
      IDENT@7..14 "Counter"
    DO_KW@14..16 "do"
    BLOCK@16..44
      NEWLINE@16..17 "\n"
      CAST_HANDLER@17..43
        CAST_KW@17..21 "cast"
        NAME@21..26
          IDENT@21..26 "Reset"
        PARAM_LIST@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        DO_KW@28..30 "do"
        BAR@30..31 "|"
        NAME@31..36
          IDENT@31..36 "state"
        BAR@36..37 "|"
        BLOCK@37..40
          NEWLINE@37..38 "\n"
          LITERAL@38..39
            INT_LITERAL@38..39 "0"
          NEWLINE@39..40 "\n"
        END_KW@40..43 "end"
      NEWLINE@43..44 "\n"
    END_KW@44..47 "end"
  EOF@47..47 ""
