crates/snow-parser/tests/snapshots/parser_tests__spawn_expr_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"spawn(counter, 0)\")"
---
SOURCE_FILE@0..16
  SPAWN_EXPR@0..16
    SPAWN_KW@0..5 "spawn"
    ARG_LIST@5..16
      L_PAREN@5..6 "("
      NAME_REF@6..13
        IDENT@6..13 "counter"
      COMMA@13..14 ","
      LITERAL@14..15
        INT_LITERAL@14..15 "0"
      R_PAREN@15..16 ")"
  EOF@16..16 ""
