crates/snow-parser/tests/snapshots/parser_tests__struct_angle_bracket_generics-2.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"struct Foo<T> do\\n  x :: T\\nend\")"
---
SOURCE_FILE@0..23
  STRUCT_DEF@0..23
    STRUCT_KW@0..6 "struct"
    NAME@6..9
      IDENT@6..9 "Foo"
    GENERIC_PARAM_LIST@9..12
      LT@9..10 "<"
      IDENT@10..11 "T"
      GT@11..12 ">"
    DO_KW@12..14 "do"
    NEWLINE@14..15 "\n"
    STRUCT_FIELD@15..19
      NAME@15..16
        IDENT@15..16 "x"
      TYPE_ANNOTATION@16..19
        COLON_COLON@16..18 "::"
        IDENT@18..19 "T"
    NEWLINE@19..20 "\n"
    END_KW@20..23 "end"
  EOF@23..23 ""
