crates/snow-parser/tests/snapshots/parser_tests__struct_deriving_empty_clause.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..34
  STRUCT_DEF@0..34
    STRUCT_KW@0..6 "struct"
    NAME@6..11
      IDENT@6..11 "Empty"
    DO_KW@11..13 "do"
    NEWLINE@13..14 "\n"
    STRUCT_FIELD@14..20
      NAME@14..15
        IDENT@14..15 "x"
      TYPE_ANNOTATION@15..20
        COLON_COLON@15..17 "::"
        IDENT@17..20 "Int"
    NEWLINE@20..21 "\n"
    END_KW@21..24 "end"
    DERIVING_CLAUSE@24..34
      IDENT@24..32 "deriving"
      L_PAREN@32..33 "("
      R_PAREN@33..34 ")"
  EOF@34..34 ""
