crates/snow-parser/tests/snapshots/parser_tests__struct_pub_with_generics.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"pub struct Pair[A, B] do\\n  first :: A\\n  second :: B\\nend\")"
---
SOURCE_FILE@0..43
  STRUCT_DEF@0..43
    VISIBILITY@0..3
      PUB_KW@0..3 "pub"
    STRUCT_KW@3..9 "struct"
    NAME@9..13
      IDENT@9..13 "Pair"
    TYPE_PARAM_LIST@13..18
      L_BRACKET@13..14 "["
      IDENT@14..15 "A"
      COMMA@15..16 ","
      IDENT@16..17 "B"
      R_BRACKET@17..18 "]"
    DO_KW@18..20 "do"
    NEWLINE@20..21 "\n"
    STRUCT_FIELD@21..29
      NAME@21..26
        IDENT@21..26 "first"
      TYPE_ANNOTATION@26..29
        COLON_COLON@26..28 "::"
        IDENT@28..29 "A"
    NEWLINE@29..30 "\n"
    STRUCT_FIELD@30..39
      NAME@30..36
        IDENT@30..36 "second"
      TYPE_ANNOTATION@36..39
        COLON_COLON@36..38 "::"
        IDENT@38..39 "B"
    NEWLINE@39..40 "\n"
    END_KW@40..43 "end"
  EOF@43..43 ""
